"Open Chinese Convert"

module(
    name = "opencc",
    version = "1.4.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_js", version = "3.2.2")
bazel_dep(name = "darts-clone", version = "0.32")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
bazel_dep(name = "marisa-trie", version = "0.3.1.bcr.2")
bazel_dep(name = "node_addon_api", version = "8.9.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "pybind11_bazel", version = "3.0.1")
bazel_dep(name = "rapidjson", version = "1.1.0.bcr.20250205")
bazel_dep(name = "rules_cc", version = "0.2.20")
bazel_dep(name = "rules_node_addon", version = "1.0.3")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "rules_python", version = "2.0.3")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "rules_zig", version = "0.14.0")
bazel_dep(name = "tclap", version = "1.2.5.bcr.1")
bazel_dep(name = "toolchains_buildbuddy", version = "0.0.4", dev_dependency = True)

single_version_override(
    module_name = "rules_python",
    patches = ["//patches:rules-python-write-unstamped-build-data.patch"],
    patch_strip = 1,
    version = "2.0.3",
)

local_path_override(
    module_name = "darts-clone",
    path = "deps/darts-clone-0.32h",
)

# Windows x64 node.lib import library for Zig/MinGW addon linking. node-addon-api
# comes from BCR (above) and the Node C headers come from the rules_nodejs Node
# toolchain (below); this import library is available from neither.
node_deps = use_extension("//node:deps.bzl", "node_deps")
use_repo(node_deps, "node_win_x64_lib")

# Windows Node headers and import libraries for rules_node_addon's native Windows
# addon build (rules_nodejs' Node toolchain does not ship C headers on Windows).
node_addon_windows = use_extension("@rules_node_addon//node_addon:windows.bzl", "node_addon_windows")
use_repo(node_addon_windows, "windows_node_api")

# Node toolchain providing the Node C headers (node_api.h). rules_node_addon's
# node_addon rule consumes these for the native addon; the Windows-Zig genrule
# unwraps the same headers into raw files (see //node:cc_headers_files.bzl).
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(include_headers = True)
use_repo(node, "nodejs_toolchains")

buildbuddy = use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy", dev_dependency = True)

zig = use_extension("@rules_zig//zig:extensions.bzl", "zig")
zig.toolchain(zig_version = "0.15.2")
use_repo(zig, "zig_toolchains")

register_toolchains(
    "@toolchains_buildbuddy//toolchains/cc:ubuntu_gcc_arm64",
    "@toolchains_buildbuddy//toolchains/cc:ubuntu_gcc_x86_64",
    dev_dependency = True,
)
register_toolchains("@rules_zig//zig/target:all")
register_toolchains("@zig_toolchains//:all")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)
use_repo(python, "python_3_12", "pythons_hub")
register_toolchains("@pythons_hub//:all")
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//python/tests:requirements_lock.txt",
)
use_repo(pip, "pip")
