load("//data/scripts:opencc_resources_zip.bzl", "opencc_resources_zip")

package(default_visibility = ["//visibility:public"])

opencc_resources_zip(
    name = "opencc_resources_zip",
    configs = ["//data/config:config"],
    dicts = ["//data/dictionary:text_dictionaries"],
    out = "opencc-resources.zip",
)
