config_files = \
	config/zhs2zht.ini \
	config/zht2zhs.ini \
	config/mix2zht.ini \
	config/mix2zhs.ini \
	$(NULL)

simp_to_trad_files = \
	simp_to_trad/characters.txt \
	simp_to_trad/phrases.txt \
	$(NULL)

trad_to_simp_files = \
	trad_to_simp/characters.txt \
	trad_to_simp/phrases.txt \
	$(NULL)

pkgdata_DATA = \
	$(config_files) \
	$(NULL)

EXTRA_DIST = \
	$(simp_to_trad_files) \
	$(trad_to_simp_files) \
	$(config_files) \
	$(NULL)
