"""Bazel build rules for the OpenCC Node.js native addon (opencc.node)."""

load("@rules_cc//cc:defs.bzl", "cc_binary")
load(":napi_headers.bzl", "cc_library_headers")

package(default_visibility = ["//visibility:public"])

# node-addon-api comes from the BCR `@node_addon_api` module as a header-only
# cc_library. The Windows-Zig genrule below builds outside the C++ toolchain, so
# it needs the header files themselves: `napi_all_headers` for the sandbox and
# `napi_header` to anchor the `-I` include dir.
cc_library_headers(
    name = "napi_all_headers",
    lib = "@node_addon_api//:node_addon_api",
)

cc_library_headers(
    name = "napi_header",
    lib = "@node_addon_api//:node_addon_api",
    only = "napi.h",
)

# The shared library that becomes opencc.node.
# cc_binary with linkshared=True on Linux produces "libopencc_clib.so";
# on macOS it produces "libopencc_clib.dylib". We rename via genrule below.
#
# node-gyp and Bazel both compile the same binding source. node-gyp lists the
# OpenCC and marisa sources directly, while Bazel links against //src:opencc_lib.
cc_binary(
    name = "opencc_clib",
    srcs = ["opencc.cc"],
    copts = select({
        "@platforms//os:windows": ["/std:c++20"],
        "//conditions:default": ["-std=c++20"],
    }),
    defines = [
        'OPENCC_VERSION=\\"1.3.2\\"',
        "NAPI_DISABLE_CPP_EXCEPTIONS",
        "Opencc_BUILT_AS_STATIC",
    ],
    includes = [".", "src"],
    linkopts = select({
        "@platforms//os:macos": ["-undefined", "dynamic_lookup", "-Wl,-S", "-Wl,-no_uuid"],
        "@platforms//os:linux": ["-Wl,-s", "-Wl,--build-id=sha1"],
        "//conditions:default": ["-Wl,-s"],
    }),
    linkshared = True,
    deps = [
        "@node_addon_api//:node_addon_api",
        "@node_headers//:node_headers",
        "//src:opencc_lib",
        # Explicit sub-library deps for headers not in //src:opencc_lib's hdrs:
        "//src:config_lib",       # Config.hpp
        "//src:converter_lib",    # Converter.hpp, ConversionInspection.hpp
        "//src:dict_converter_lib",  # DictConverter.hpp
        "//src:exception_lib",    # Exception.hpp
    ],
)

# ----------------------------------------------------------------
# Rename the platform-specific shared library to "opencc.node"
# ----------------------------------------------------------------
genrule(
    name = "opencc_node",
    srcs = [":opencc_clib"],
    outs = ["opencc.node"],
    cmd = "cp $(location :opencc_clib) $@",
)

genrule(
    name = "opencc_node_windows_zig",
    srcs = [
        "opencc.cc",
        "//deps/marisa-0.3.1:all_files",
        "//deps/rapidjson-1.1.0:all_files",
        "//src:all_files",
        ":napi_all_headers",
        "@node_headers//:all_files",
    ],
    outs = ["windows-x64/opencc.node"],
    cmd = (
        "ZIG=$(ZIG_BIN) " +
        "bash $(location //scripts:build_node_windows_zig) " +
        "$@ " +
        "$(location @node_headers//:node_api_header) " +
        "$(location :napi_header) " +
        "$(location @node_win_x64_lib//file)"
    ),
    tools = [
        "//scripts:build_node_windows_zig",
        ":napi_all_headers",
        ":napi_header",
        "@node_headers//:all_files",
        "@node_headers//:node_api_header",
        "@node_win_x64_lib//file",
    ],
    toolchains = ["@rules_zig//zig:toolchain_type"],
)
