"""Bazel build rules for the OpenCC Node.js native addon (opencc.node)."""

load("@rules_cc//cc:defs.bzl", "cc_binary")
load(":cc_headers_files.bzl", "cc_header_pick", "cc_headers_files")

package(default_visibility = ["//visibility:public"])

# Raw Node header files for the Windows-Zig cross-compile ONLY (see the genrule
# below). The main native-addon path (//node:opencc_node) depends on the Node
# headers as a normal cc_library and does NOT use these targets. rules_nodejs
# only exposes the toolchain headers as a cc_library (CcInfo), so we unwrap them
# into raw files that `zig c++` can consume via $(location) / -I.
cc_headers_files(
    name = "windows_zig_node_header_files",
    lib = "@rules_nodejs//nodejs/headers:current_node_cc_headers",
)

cc_header_pick(
    name = "windows_zig_node_api_h",
    basename = "node_api.h",
    lib = "@rules_nodejs//nodejs/headers:current_node_cc_headers",
)

# The shared library that becomes opencc.node.
# cc_binary with linkshared=True on Linux produces "libopencc_clib.so";
# on macOS it produces "libopencc_clib.dylib". We rename via genrule below.
#
# node-gyp and Bazel both compile the same binding source. node-gyp lists the
# OpenCC and marisa sources directly, while Bazel links against //src:opencc_lib.
cc_binary(
    name = "opencc_clib",
    srcs = ["opencc.cc"],
    copts = select({
        "@platforms//os:windows": ["/std:c++20"],
        "//conditions:default": ["-std=c++20"],
    }),
    defines = [
        'OPENCC_VERSION=\\"1.3.2\\"',
        "NAPI_DISABLE_CPP_EXCEPTIONS",
        "Opencc_BUILT_AS_STATIC",
    ],
    includes = [".", "src"],
    linkopts = select({
        "@platforms//os:macos": ["-undefined", "dynamic_lookup", "-Wl,-S", "-Wl,-no_uuid"],
        "@platforms//os:linux": ["-Wl,-s", "-Wl,--build-id=sha1"],
        "//conditions:default": ["-Wl,-s"],
    }),
    linkshared = True,
    deps = [
        "@node_addon_api//:node_addon_api",
        "@rules_nodejs//nodejs/headers:current_node_cc_headers",
        "//src:opencc_lib",
        # Explicit sub-library deps for headers not in //src:opencc_lib's hdrs:
        "//src:config_lib",       # Config.hpp
        "//src:converter_lib",    # Converter.hpp, ConversionInspection.hpp
        "//src:dict_converter_lib",  # DictConverter.hpp
        "//src:exception_lib",    # Exception.hpp
    ],
)

# ----------------------------------------------------------------
# Rename the platform-specific shared library to "opencc.node"
# ----------------------------------------------------------------
genrule(
    name = "opencc_node",
    srcs = [":opencc_clib"],
    outs = ["opencc.node"],
    cmd = "cp $(location :opencc_clib) $@",
)

genrule(
    name = "opencc_node_windows_zig",
    srcs = [
        "opencc.cc",
        "//deps/marisa-0.3.1:all_files",
        "//deps/rapidjson-1.1.0:all_files",
        "//src:all_files",
        # node-addon-api headers, exposed via exports_files in the BCR module
        # (see //patches:node-addon-api-drop-rules-nodejs-dep.patch).
        "@node_addon_api//:napi-inl.deprecated.h",
        "@node_addon_api//:napi-inl.h",
        "@node_addon_api//:napi.h",
        # Node C headers for cross-compiling only; the host Node toolchain's
        # headers (node_api.h is platform-agnostic) feed the zig build.
        ":windows_zig_node_header_files",
    ],
    outs = ["windows-x64/opencc.node"],
    cmd = (
        "ZIG=$(ZIG_BIN) " +
        "bash $(location //scripts:build_node_windows_zig) " +
        "$@ " +
        "$(location :windows_zig_node_api_h) " +
        "$(location @node_addon_api//:napi.h) " +
        "$(location @node_win_x64_lib//file)"
    ),
    tools = [
        "//scripts:build_node_windows_zig",
        "@node_addon_api//:napi-inl.deprecated.h",
        "@node_addon_api//:napi-inl.h",
        "@node_addon_api//:napi.h",
        ":windows_zig_node_api_h",
        ":windows_zig_node_header_files",
        "@node_win_x64_lib//file",
    ],
    toolchains = ["@rules_zig//zig:toolchain_type"],
)
