package(default_visibility = ["//visibility:public"])

sh_binary(
    name = "build_node_windows_zig",
    srcs = ["build-node-windows-zig.sh"],
)

sh_binary(
    name = "build_jieba_windows_zig",
    srcs = ["build-jieba-windows-zig.sh"],
)

sh_binary(
    name = "build_cli_windows_zig",
    srcs = ["build-cli-windows-zig.sh"],
)
