load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_test.bzl", "py_test")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

# Consumed by the Node.js js_test (//:node_test) for the prebuild-assets case.
js_library(
    name = "prepare_node_prebuild_artifacts",
    srcs = ["prepare-node-prebuild-artifacts.js"],
)

py_binary(
    name = "convert_resource_zip",
    srcs = ["convert_resource_zip.py"],
)

py_test(
    name = "compile_to_inline_config_test",
    size = "small",
    srcs = [
        "compile_to_inline_config.py",
        "compile_to_inline_config_test.py",
    ],
    imports = ["."],
    main = "compile_to_inline_config_test.py",
)

sh_binary(
    name = "build_node_windows_zig",
    srcs = ["build-node-windows-zig.sh"],
)

sh_binary(
    name = "build_jieba_windows_zig",
    srcs = ["build-jieba-windows-zig.sh"],
)

sh_binary(
    name = "build_cli_windows_zig",
    srcs = ["build-cli-windows-zig.sh"],
)
