cc_library(
    name = "opencc",
    visibility = ["//visibility:public"],
    deps = [
        ":binary_dict",
        ":common",
        ":darts_dict",
    ],
)

cc_library(
    name = "binary_dict",
    srcs = ["BinaryDict.cpp"],
    hdrs = ["BinaryDict.hpp"],
    deps = [
        ":common",
        ":lexicon",
        ":serializable_dict",
    ],
)

cc_test(
    name = "binary_dict_test",
    srcs = ["BinaryDictTest.cpp"],
    deps = [
        ":binary_dict",
        ":text_dict_test_base",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "common",
    hdrs = [
        "Common.hpp",
        "Export.hpp",
        "Optional.hpp",
        "opencc_config.h",
    ],
)

cc_library(
    name = "darts_dict",
    srcs = ["DartsDict.cpp"],
    hdrs = ["DartsDict.hpp"],
    deps = [
        ":binary_dict",
        ":common",
        ":lexicon",
        ":serializable_dict",
        "@darts-clone",
    ],
)

cc_test(
    name = "darts_dict_test",
    srcs = ["DartsDictTest.cpp"],
    deps = [
        ":darts_dict",
        ":text_dict_test_base",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "dict",
    srcs = ["Dict.cpp"],
    hdrs = ["Dict.hpp"],
    deps = [
        ":common",
        ":dict_entry",
    ],
)

cc_library(
    name = "dict_entry",
    srcs = ["DictEntry.cpp"],
    hdrs = ["DictEntry.hpp"],
    deps = [
        ":common",
        ":segments",
        ":utf8_util",
    ],
)

cc_library(
    name = "exception",
    hdrs = [
        "Exception.hpp",
    ],
    deps = [":common"],
)

cc_library(
    name = "lexicon",
    srcs = ["Lexicon.cpp"],
    hdrs = ["Lexicon.hpp"],
    deps = [
        ":common",
        ":dict_entry",
    ],
)

cc_library(
    name = "marisa_dict",
    srcs = ["MarisaDict.cpp"],
    hdrs = ["MarisaDict.hpp"],
    deps = [
        ":common",
        ":lexicon",
        ":serialized_values",
        "@marisa-trie",
    ],
)

cc_test(
    name = "marisa_dict_test",
    srcs = ["MarisaDictTest.cpp"],
    deps = [
        ":marisa_dict",
        ":text_dict_test_base",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "segments",
    hdrs = [
        "Segments.hpp",
    ],
    deps = [":common"],
)

cc_library(
    name = "serializable_dict",
    hdrs = ["SerializableDict.hpp"],
    deps = [
        ":dict",
    ],
)

cc_library(
    name = "serialized_values",
    srcs = ["SerializedValues.cpp"],
    hdrs = ["SerializedValues.hpp"],
    deps = [
        ":common",
        ":lexicon",
        ":serializable_dict",
    ],
)

cc_test(
    name = "serialized_values_test",
    srcs = ["SerializedValuesTest.cpp"],
    deps = [
        ":serialized_values",
        ":text_dict_test_base",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "test_utils",
    testonly = True,
    hdrs = ["TestUtils.hpp"],
    deps = [
        "@googletest//:gtest",
    ],
)

cc_library(
    name = "test_utils_utf8",
    testonly = True,
    srcs = ["TestUtilsUTF8.hpp"],
)

cc_library(
    name = "text_dict",
    srcs = ["TextDict.cpp"],
    hdrs = ["TextDict.hpp"],
    deps = [
        ":common",
        ":lexicon",
        ":serializable_dict",
    ],
)

cc_test(
    name = "text_dict_test",
    srcs = ["TextDictTest.cpp"],
    deps = [
        ":text_dict",
        ":text_dict_test_base",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "text_dict_test_base",
    testonly = True,
    srcs = ["TextDictTestBase.hpp"],
    deps = [
        ":lexicon",
        ":test_utils",
        ":test_utils_utf8",
        ":text_dict",
    ],
)

cc_library(
    name = "utf8_util",
    srcs = ["UTF8Util.cpp"],
    hdrs = ["UTF8Util.hpp"],
    deps = [
        ":common",
        ":exception",
    ],
)

cc_test(
    name = "utf8_util_test",
    srcs = ["UTF8UtilTest.cpp"],
    deps = [
        ":test_utils",
        ":utf8_util",
        "@googletest//:gtest_main",
    ],
)
